2007-03-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGDragView.m (GSActionForDragOperation,
	GSDragOperationForAction): Completed and corrected drag type
	mapping between xdnd and OpenStep. NSDragOperationAll should now
	be map back correctly when converted to xdnd and back again.

2007-03-07 Xavier Glattard <xavier.glattard@online.fr>

	* Source/win32/Event_format.sed,
	* Source/win32/GSDisplayServer_details.m,
	* Source/win32/RELEASE_NOTES,
	* Source/win32/w32_config.h,
	* Source/win32/w32_debug.m,
	* Source/win32/w32_notifications.m: Delete files.
	* Source/win32/WIN32Server.m (and other files):
	Deletion of all non-GNUstep debug stuff (printf...)
	Deletion of all Notification hooks (used for a debugging purpose)
	Deletion of the Application preference Panel that pops up the 1st
	time you run _any_ application. 
	Deletion of the check of GSWINHandlesWindowDecorations and 
	GSWIN32HandlesWindowDecorations options (none worked because of a
	typo and are now deprecated). Use of GSBackHandlesWindowDecorations 
	option like X11 backend instead of GSUseWMStyles (marked as deprecated).
	Use of GSBackUsesNativeTaskbar option instead of GSUseWMTaskbar
	(marked as deprecated)
	All these options are read in -initWithAttribute: (no more in
	+inializeBackend) and set an instance (not class) variable. 
	Add methods -handlesWindowDecorations/-setHandlesWindowDecorations
	Add methods -usesNativeTaskbar/-setUsesNativeTaskbar
	* Source/win32/w32_GLcontext.m:
	Fix a bug in OpenGL sub-window placement when handlesWindowDecorations == YES
	
2007-03-06 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Add check for syslog
	* config.h.in: regenerate
	* configure: regenerate
	* Tools/gpbs.m: add --auto option to shut down when all connections
	from apps requiring pasteboard services are closed.

2007-03-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-DPSinitmatrix, -GSCurrentCTM):
	Don't consider flipped state.